[package]
name = "multi_snake_stm32f7_rust"
version = "0.1.0"
authors = ["","Florian Götz flogoetz1@web.de","Fabian Wiesner <wiesner.info@gmail.com>"]

[dependencies]
cortex-m = "0.1.4 "
r0 = "0.1.0"

[dependencies.arrayvec]
default-features = false
version = "0.3.20"

[dependencies.stm32f7_discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"
branch = "smoltcp"
version = "0.1.0"

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4"]

[profile.release]
lto = true
